# rhizome

./: .gitignore  README.md  main.py  pyproject.toml
agents/: analyze.py  models.py  orchestrator.py  report.py  visualize.py
data/: loader.py
tests/: conftest.py  test_analyze_tools.py  test_integration.py  test_loader.py  test_models.py  test_report_tools.py  test_visualize_tools.py
